--- a/Biletarnica/Biletarnica/Biletarnica.csproj
+++ b/Biletarnica/Biletarnica/Biletarnica.csproj
@@ -4,5 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+<PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
 
 </Project>
